[package]
name = "bevy_skybox"
description = "A skybox from an image for bevyengine.org"
categories = ["game-development"]
keywords = ["bevy", "skybox", "gamedev", "graphics"]
version = "0.5.0"
authors = ["Jonathan Lawn <Jonathan.M.Lawn@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bevy_skybox/"
repository = "https://github.com/jomala/bevy_skybox/"
edition = "2018"
include = ["src/**/*", "README.md", "CHANGELOG.md", "assets/*.vert", "assets/*.frag"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "90586a4c461cde86b8a0e08f0770894e7cf30862" }
image = "0.23"
itertools = "0.10"

